--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"repository": "Eddi-S/crypto-random-string-browserify",
 	"author": {
-		"name": "Eddi"
+		"name": "Eddi Søgaard"
 	},
 	"type": "module",
 	"exports": "./index.js",
@@ -33,11 +33,13 @@
 		"protect"
 	],
 	"dependencies": {
-		"type-fest": "^1.0.1"
+		"crypto-browserify": "^3.12.0",
+		"type-fest": "^1.0.1",
+		"util": "^0.12.4"
 	},
 	"devDependencies": {
-		"ava": "^3.15.0",
-		"tsd": "^0.14.0",
+		"ava": "^4.1.0",
+		"tsd": "^0.20.0",
 		"xo": "^0.38.2"
 	}
 }
